--- a/E3/web/website.html
+++ b/E3/web/website.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Registro de Produto</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <title>OLAP APP</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
-    <h1>Registro de Produto</h1>
-    <form action="register_product.py" method="POST">
-        <label for="product_sku">SKU:</label>
-        <input type="text" id="product_sku" name="product_register_sku" required>
+  <div class="content">
+    <h1>OLAP APP</h1>
+    <div class="menu">
+      <button onclick="openSecondaryMenu('register_product')">Registar produtos</button>
+      <button onclick="openSecondaryMenu('remove_product')">Remover produtos</button>
+      <!-- Add other menu options here -->
+    </div>
 
-        <label for="product_name">Nome:</label>
-        <input type="text" id="product_name" name="product_register_name" required>
-
-        <label for="product_price">Preço:</label>
-        <input type="number" id="product_price" name="product_register_price" required>
-
-        <input type="submit" value="Registrar Produto">
-    </form>
+    <div id="secondaryMenuContainer"></div>
+  </div>
 </body>
 </html>
