--- a/E3/web/website.html
+++ b/E3/web/website.html
@@ -9,7 +9,7 @@
   <div class="content">
     <h1>OLAP APP</h1>
     <div class="menu">
-      <button onclick="openSecondaryMenu('register_product')">Register products</button>
+      <button onclick="openSecondaryMenu('register_product')">Register Products</button>
       <button onclick="openSecondaryMenu('remove_product')">Remove Products</button>
       <!-- Add other menu options here -->
     </div>
