--- a/E3/web/website.html
+++ b/E3/web/website.html
@@ -11,6 +11,13 @@
     <div class="menu">
       <button onclick="openSecondaryMenu('register_product')">Register Products</button>
       <button onclick="openSecondaryMenu('remove_product')">Remove Products</button>
+      <button onclick="openSecondaryMenu('register_supplier')">Register Supplier</button>
+      <button onclick="openSecondaryMenu('remove_supplier')">Remove Supplier</button>
+      <button onclick="openSecondaryMenu('change_product')">Change Product</button>
+      <button onclick="openSecondaryMenu('register_client')">Register Client</button>
+      <button onclick="openSecondaryMenu('remove_client')">Remove Client</button>
+      <button onclick="openSecondaryMenu('make_order')">Make Order</button>
+      <button onclick="openSecondaryMenu('pay_order')">Pay Order</button>
       <!-- Add other menu options here -->
     </div>
 
