--- a/E3/web/register_product.html
+++ b/E3/web/register_product.html
@@ -27,7 +27,7 @@
         <label for="product_ean">Product EAN:</label>
         <input type="text" name="get_product_ean" id="product_ean">
         
-        <input type="submit" value="Register Product">
+        <input type="submit" value="Submit">
       </div>
     </form>
   </div>
