--- a/E3/web/remove_client.html
+++ b/E3/web/remove_client.html
@@ -6,11 +6,11 @@
 </head>
 <body>
   <div class="content">
-    <h1>Remove Product</h1>
+    <h1>Remove Client</h1>
     <form action="app.cgi" method="post">
       <div class="secondary-menu">
-        <label for="product_sku">Product SKU:</label>
-        <input type="text" name="product_sku" id="product_sku" required>
+        <label for="cust_no">Customer Number:</label>
+        <input type="text" name="reg_cust_no" id="cust_no" required>
         
         <input type="submit" value="Remove">
       </div>
