--- a/E3/web/register_supplier.html
+++ b/E3/web/register_supplier.html
@@ -24,7 +24,7 @@
         <label for="product_sku">Product SKU:</label>
         <input type="text" name="reg_product_sku" id="product_sku" required>
         
-        <input type="submit" value="Register Supplier">
+        <input type="submit" value="Submit">
       </div>
     </form>
   </div>
