--- a/E3/web/remove_supplier.html
+++ b/E3/web/remove_supplier.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Remove Product</title>
+  <title>Remove Supplier</title>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div class="content">
-    <h1>Remove Product</h1>
+    <h1>Remove Suppliert</h1>
     <form action="app.cgi" method="post">
       <div class="secondary-menu">
-        <label for="product_sku">Product SKU:</label>
-        <input type="text" name="product_sku" id="product_sku" required>
-        
+        <label for="reg_supplier_tin">Supplier SKU:</label>
+        <input type="text" name="reg_supplier_tin" id="reg_supplier_tin" required>
+
         <input type="submit" value="Remove">
       </div>
     </form>
