--- a/E3/web/remove_client.html
+++ b/E3/web/remove_client.html
@@ -9,8 +9,8 @@
     <h1>Remove Client</h1>
     <form action="app.cgi" method="post">
       <div class="secondary-menu">
-        <label for="cust_no">Customer Number:</label>
-        <input type="text" name="reg_cust_no" id="cust_no" required>
+        <label for="customer_id">Customer ID:</label>
+        <input type="text" name="customer_id" id="customer_id" required>
         
         <input type="submit" value="Remove">
       </div>
