--- a/E3/web/pay_order.html
+++ b/E3/web/pay_order.html
@@ -10,7 +10,7 @@
 <body>
   <div class="content">
     <h1>Pay Order</h1>
-    <form action="app.cgi" method="post">
+    <form action="pay_order.cgi" method="post">
       <div class="secondary-menu">
         <label for="order_id">Order ID:</label>
         <input type="text" name="order_id" id="order_id" required>
