--- a/E3/web/remove_product.html
+++ b/E3/web/remove_product.html
@@ -7,7 +7,7 @@
 <body>
   <div class="content">
     <h1>Remove Product</h1>
-    <form action="app.cgi" method="post">
+    <form action="remove_product.cgi" method="post">
       <div class="secondary-menu">
         <label for="product_sku">Product SKU:</label>
         <input type="text" name="product_sku" id="product_sku" required>
