--- a/E3/web/remove_supplier.html
+++ b/E3/web/remove_supplier.html
@@ -7,7 +7,7 @@
 <body>
   <div class="content">
     <h1>Remove Suppliert</h1>
-    <form action="app.cgi" method="post">
+    <form action="remove_supplier.cgi" method="post">
       <div class="secondary-menu">
         <label for="reg_supplier_tin">Supplier SKU:</label>
         <input type="text" name="reg_supplier_tin" id="reg_supplier_tin" required>
