lable fixed everything
fixed the labels for everything else too

Found a problem, register supplier also needs the date, but it's not being added, nor is on the html. I don't know how to add it and make it the same as the way the other one is, but i'll try

--- a/E3/web/register_supplier.html
+++ b/E3/web/register_supplier.html
@@ -10,7 +10,7 @@
 <body>
   <div class="content">
     <h1>Register Supplier</h1>
-    <form action="app.cgi" method="post">
+    <form action="register_supplier.cgi" method="post">
       <div class="secondary-menu">
         <label for="reg_supplier_tin">Supplier SKU:</label>
         <input type="text" name="reg_supplier_tin" id="reg_supplier_tin" required>
