--- a/E3/web/make_order.html
+++ b/E3/web/make_order.html
@@ -7,7 +7,7 @@
 <body>
   <div class="content">
     <h1>Make Order</h1>
-    <form action="app.cgi" method="post">
+    <form action="make_order.cgi" method="post">
       <div class="secondary-menu">
         <label for="order_id">Order ID:</label>
         <input type="text" name="order_id" id="order_id" required>
