--- a/E3/web/register_client.html
+++ b/E3/web/register_client.html
@@ -7,7 +7,7 @@
 <body>
   <div class="content">
     <h1>Register Client</h1>
-    <form action="app.cgi" method="post">
+    <form action="register_products.cgi" method="post">
       <div class="secondary-menu">
         <label for="customer_id">Customer ID:</label>
         <input type="text" name="customer_id" id="customer_id" required>
