--- a/E3/web/register_supplier.html
+++ b/E3/web/register_supplier.html
@@ -23,7 +23,11 @@
         
         <label for="product_sku">Product SKU:</label>
         <input type="text" name="reg_product_sku" id="product_sku" required>
+
+        <label for="date">Order Date:</label>
+        <input type="date" name="date" id="date" required>
         
+
         <input type="submit" value="Submit">
       </div>
     </form>
