Stuff started working
Had to change the first comment of the .cgi's, the shbang

--- a/E3/web/register_product.html
+++ b/E3/web/register_product.html
@@ -10,7 +10,7 @@
 <body>
   <div class="content">
     <h1>Registar produtos</h1>
-    <form action="register_product.html" method="post">
+    <form action="register_product.cgi" method="post">
       <div class="secondary-menu">
         <label for="product_sku">Product SKU:</label>
         <input type="text" name="reg_product_sku" id="product_sku" required>
