--- a/E3/web/remove_client.html
+++ b/E3/web/remove_client.html
@@ -15,6 +15,10 @@
         <input type="submit" value="Remove">
       </div>
     </form>
+    <form action='website.html'>
+      <br><br>
+      <input type='submit' value='Return to Main Menu'>
+    </form>
   </div>
 </body>
 </html>
