--- a/E3/web/pay_order.html
+++ b/E3/web/pay_order.html
@@ -21,6 +21,10 @@
         <input type="submit" value="Pay">
       </div>
     </form>
+    <form action='website.html'>
+      <br><br>
+      <input type='submit' value='Return to Main Menu'>
+    </form>
   </div>
 </body>
 </html>
