--- a/E3/web/register_client.html
+++ b/E3/web/register_client.html
@@ -24,8 +24,12 @@
         <label for="address">Address:</label>
         <textarea name="reg_address" id="address" required></textarea>
         
-        <input type="submit" value="Submit">
+        <input type="submit" value="Remove">
       </div>
+    </form>
+    <form action='website.html'>
+      <br><br>
+      <input type='submit' value='Return to Main Menu'>
     </form>
   </div>
 </body>
