--- a/E3/web/register_supplier.html
+++ b/E3/web/register_supplier.html
@@ -28,8 +28,12 @@
         <input type="date" name="date" id="date" required>
         
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="Remove">
       </div>
+    </form>
+    <form action='website.html'>
+      <br><br>
+      <input type='submit' value='Return to Main Menu'>
     </form>
   </div>
 </body>
