--- a/E3/web/register_product.html
+++ b/E3/web/register_product.html
@@ -27,8 +27,12 @@
         <label for="product_ean">Product EAN:</label>
         <input type="text" name="get_product_ean" id="product_ean">
         
-        <input type="submit" value="Submit">
+        <input type="submit" value="Remove">
       </div>
+    </form>
+    <form action='website.html'>
+      <br><br>
+      <input type='submit' value='Return to Main Menu'>
     </form>
   </div>
 </body>
