--- a/E3/web/register_client.html
+++ b/E3/web/register_client.html
@@ -24,7 +24,7 @@
         <label for="address">Address:</label>
         <textarea name="reg_address" id="address" required></textarea>
         
-        <input type="submit" value="Remove">
+        <input type="submit" value="Submit">
       </div>
     </form>
     <form action='website.html'>
