--- a/E3/web/make_order.html
+++ b/E3/web/make_order.html
@@ -27,6 +27,10 @@
         <input type="submit" value="Submit">
       </div>
     </form>
+    <form action='website.html'>
+      <br><br>
+      <input type='submit' value='Return to Main Menu'>
+    </form>
   </div>
 </body>
 </html>
