--- a/E3/web/register_supplier.html
+++ b/E3/web/register_supplier.html
@@ -28,7 +28,7 @@
         <input type="date" name="date" id="date" required>
         
 
-        <input type="submit" value="Remove">
+        <input type="submit" value="Submit">
       </div>
     </form>
     <form action='website.html'>
