--- a/E3/web/register_product.html
+++ b/E3/web/register_product.html
@@ -31,8 +31,9 @@
       </div>
     </form>
     <form action='website.html'>
-      <br><br>
-      <input type='submit' value='Return to Main Menu'>
+      <div class="secondary-menu">
+      <input type='submit' value='Return'>
+      </div>
     </form>
   </div>
 </body>
