--- a/E3/web/remove_client.html
+++ b/E3/web/remove_client.html
@@ -14,9 +14,10 @@
         <input type="submit" value="Remove">
       </div>
     </form>
-    <form action='website.html'>
-      <br><br>
-      <input type='submit' value='Return to Main Menu'>
+    <form action="website.html" method="post">
+      <div class="secondary-menu">
+      <input type='submit' value='Return'>
+      </div>
     </form>
   </div>
 </body>
