correcao register supplier

--- a/E3/web/register_supplier.html
+++ b/E3/web/register_supplier.html
@@ -19,7 +19,7 @@
         <input type="text" name="reg_supplier_name" id="reg_supplier_name" required>
         
         <label for="reg_supplier_adress">Supplier Adress:</label>
-        <textarea name="reg_supplier_adress" id="reg_supplier_adress" required>
+        <input type="text" name="reg_supplier_adress" id="reg_supplier_adress" required>
         
         <label for="product_sku">Product SKU:</label>
         <input type="text" name="reg_product_sku" id="product_sku" required>
